--- a/web_interface/templates/all_images.html
+++ b/web_interface/templates/all_images.html
@@ -9,8 +9,8 @@
     <label for="dateFilter">Filter by Date:</label>
     <input type="date" class="form-control" id="dateFilter">
 </div>
-<button class="btn btn-primary mb-2" onclick="filterByDate()">Filter</button>
-<button class="btn btn-secondary mb-2" onclick="sortImagesByDate()">Sort by Date</button>
+<button class="buttonA" onclick="filterByDate()">Filter</button>
+<button class="buttonA" onclick="sortImagesByDate()">Sort by Date</button>
 
 <!-- Add a grid of images with dates here -->
 <div class="row mt-3" id="imagesGrid">
