--- a/web_interface/templates/configure.html
+++ b/web_interface/templates/configure.html
@@ -50,7 +50,7 @@ content %}
     </div>
   </div>
 
-  <button class="btn btn-primary" onclick="saveConfiguration()">Save</button>
+  <button class="buttonA" onclick="saveConfiguration()">Save</button>
   <br />
   <br />
 </div>
