--- a/web_interface/templates/base.html
+++ b/web_interface/templates/base.html
@@ -9,11 +9,39 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+<style>
 
-<body>
+    .buttonA {
+        background-color: #1e2b45;
+        border: 1px solid white;
+        color: white;
+        border-radius: 8px;
+        padding: 8px 24px;
+        text-decoration: none;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        box-shadow: 0 6px #999;
+    }
+    .buttonA:hover {background-color: #273e6b}
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">AMDT</a>
+    .buttonA:active {
+      background-color: #273e6b;
+      box-shadow: 0 5px #666;
+      transform: translateY(4px);
+    }
+    .imageCard {
+        padding: 4px;
+        margin-bottom: 4px;
+        background-color: #111827; /* Dark feature box background color */
+        border: 1px solid #0e0e1c; /* Dark border color */
+        border-radius: 8px;
+    }
+</style>
+<body style="background-color: #050c17; color: #d6d6d6;"> <!-- Update background and text colors -->
+
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0e131c;"> <!-- Update navbar background color -->
+        <a class="navbar-brand" href="#" style="color: #d6d6d6;">AMDT</a> <!-- Update navbar brand color -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,22 +50,22 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+                    <a class="nav-link" href="{{ url_for('home') }}" style="color: #d6d6d6;">Home</a> <!-- Update navbar link color -->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('detected_meteors') }}">Detected Meteors</a>
+                    <a class="nav-link" href="{{ url_for('detected_meteors') }}" style="color: #d6d6d6;">Detected Meteors</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('all_images') }}">All Images</a>
+                    <a class="nav-link" href="{{ url_for('all_images') }}" style="color: #d6d6d6;">All Images</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('live_stream') }}">Live Stream</a>
+                    <a class="nav-link" href="{{ url_for('live_stream') }}" style="color: #d6d6d6;">Live Stream</a>
                 </li>
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="{{ url_for('diagnostics') }}">Diagnostics</a>-->
-<!--                </li>-->
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('diagnostics') }}" style="color: #d6d6d6;">Diagnostics</a>
+                </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('configure') }}">Configure</a>
+                    <a class="nav-link" href="{{ url_for('configure') }}" style="color: #d6d6d6;">Configure</a>
                 </li>
             </ul>
         </div>
