--- a/web_interface/templates/home.html
+++ b/web_interface/templates/home.html
@@ -14,26 +14,43 @@
     <style>
         /* Custom styles for the home page */
         body {
-            background-color: #f8f9fa;
-            color: #343a40;
+            background-color: #050517; /* Dark background color */
+            color: #d6d6d6; /* Light text color */
+            font-family: 'Arial Rounded MT Bold', sans-serif; /* Retro space vibe font */
         }
 
         .navbar {
-            background-color: #343a40;
+            background-color: #0e0e1c; /* Darker navbar background color */
         }
 
         .jumbotron {
-            background-color: #343a40;
-            color: #ffffff;
+            background: url('https://firebasestorage.googleapis.com/v0/b/amdt-a1b24.appspot.com/o/WebsiteDesignImages%2F006_2017-04-28_160329_N_DSC_0713.thumb.jpg?alt=media&token=bbeb408a-2295-4522-be6b-2a4a115c1623') no-repeat center center; /* Background image with no repeat and centered */
+            background-size: cover; /* Cover the entire element with the background image */
+            color: #d6d6d6;
+            padding: 100px; /* Adjust padding for better text positioning */
         }
 
         .feature-box {
             padding: 20px;
             margin-bottom: 20px;
-            background-color: #ffffff;
-            border: 1px solid #ced4da;
-            border-radius: 4px;
+            background-color: #111827; /* Dark feature box background color */
+            border: 1px solid #0e0e1c; /* Dark border color */
+            border-radius: 8px;
         }
+
+        .feature-box h3,
+        .feature-box p {
+            color: #ffffff; /* Light text color */
+        }
+
+        .meteor-image {
+            max-width: 100%;
+            height: auto;
+            margin-top: 20px; /* Adjust as needed */
+            border-radius: 8px; /* Rounded corners for the image */
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.2); /* Add shadow for depth */
+        }
+
     </style>
 </head>
 
@@ -44,7 +61,7 @@
 
         <!-- Jumbotron Header -->
         <div class="jumbotron">
-            <h1 class="display-4">Welcome to AMDT</h1>
+            <h1 class="display-4" style="font-family: 'Arial Rounded MT Bold', sans-serif;">Welcome to AMDT</h1>
             <p class="lead">Autonomous Meteor Detector and Tracker</p>
         </div>
 
@@ -55,7 +72,7 @@
                     <h3>Open-source</h3>
                     <p>Our website is free to access and can be found on GitHub:</p>
                     <p><a href="https://github.com/ECE-492-Capstone-Group" target="_blank">https://github.com/ECE-492-Capstone-Group</a></p>
-                </div>                
+                </div>
             </div>
             <div class="col-md-4">
                 <div class="feature-box">
@@ -72,6 +89,5 @@
         </div>
 
     </div>
-
 
 {% endblock %}
