--- a/web_interface/templates/home.html
+++ b/web_interface/templates/home.html
@@ -11,58 +11,18 @@
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <style>
-        /* Custom styles for the home page */
-        body {
-            background-color: #050517; /* Dark background color */
-            color: #d6d6d6; /* Light text color */
-            font-family: 'Arial Rounded MT Bold', sans-serif; /* Retro space vibe font */
-        }
 
-        .navbar {
-            background-color: #0e0e1c; /* Darker navbar background color */
-        }
-
-        .jumbotron {
-            background: url('https://firebasestorage.googleapis.com/v0/b/amdt-a1b24.appspot.com/o/WebsiteDesignImages%2F006_2017-04-28_160329_N_DSC_0713.thumb.jpg?alt=media&token=bbeb408a-2295-4522-be6b-2a4a115c1623') no-repeat center center; /* Background image with no repeat and centered */
-            background-size: cover; /* Cover the entire element with the background image */
-            color: #d6d6d6;
-            padding: 100px; /* Adjust padding for better text positioning */
-        }
-
-        .feature-box {
-            padding: 20px;
-            margin-bottom: 20px;
-            background-color: #111827; /* Dark feature box background color */
-            border: 1px solid #0e0e1c; /* Dark border color */
-            border-radius: 8px;
-        }
-
-        .feature-box h3,
-        .feature-box p {
-            color: #ffffff; /* Light text color */
-        }
-
-        .meteor-image {
-            max-width: 100%;
-            height: auto;
-            margin-top: 20px; /* Adjust as needed */
-            border-radius: 8px; /* Rounded corners for the image */
-            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.2); /* Add shadow for depth */
-        }
-
-    </style>
 </head>
 
 <body>
 
     <!-- Main Content -->
-    <div class="container mt-4">
+    <div>
 
         <!-- Jumbotron Header -->
         <div class="jumbotron">
-            <h1 class="display-4" style="font-family: 'Arial Rounded MT Bold', sans-serif;">Welcome to AMDT</h1>
-            <p class="lead">Autonomous Meteor Detector and Tracker</p>
+            <h1 class="display-4" >Welcome to AMDT</h1>
+            <h3 class="lead">Autonomous Meteor Detector and Tracker</h3>
         </div>
 
         <!-- Feature Boxes -->
