--- a/web_interface/templates/all_images.html
+++ b/web_interface/templates/all_images.html
@@ -7,24 +7,60 @@
 <h2>All Images</h2>
 <div class="form-group">
     <label for="dateFilter">Filter by Date:</label>
-    <input type="date" class="form-control" id="dateFilter">
+    <input type="date" class="form-control" id="dateFilter" style="width: 180px;">
 </div>
+
 <button class="buttonA" onclick="filterByDate()">Filter</button>
-<button class="buttonA" onclick="sortImagesByDate()">Sort by Date</button>
+
+<a href="{{ url_for('download_images_as_zip') }}"
+    class="btn btn-dark btn-sm">Download All
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+      <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+      <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
+    </svg>
+</a>
 
 <!-- Add a grid of images with dates here -->
 <div class="row mt-3" id="imagesGrid">
     <!-- Loop through image URLs and render images dynamically -->
     {% for image in images %}
     <div class="col-md-4 mb-3">
-        <div class="card">
+        <div class="image-card">
             <img src="{{ image.url }}" class="card-img-top" alt="Image">
             <div class="card-body">
-                <p class="card-text">Capture Date: {{ image.date }}</p>
+                <a class="card-text">{{ image.date }}</a>
+                <a href="{{ url_for('download_image', image_path=image.url) }}" download="AMDT_{{image.date}}.jpg"
+                    class="btn btn-dark btn-sm">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                      <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+                      <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
+                    </svg>
+                </a>
             </div>
         </div>
     </div>
     {% endfor %}
 </div>
+
+<!-- Pagination -->
+<nav aria-label="Page navigation">
+    <ul class="pagination">
+        {% if current_page > 1 %}
+            <li class="page-item"><a class="page-link" href="?page={{ current_page - 1 }}">Previous</a></li>
+        {% else %}
+            <li class="page-item disabled"><span class="page-link">Previous</span></li>
+        {% endif %}
+
+        {% for page_num in range(1, total_pages + 1) %}
+            <li class="page-item {% if page_num == current_page %}active{% endif %}"><a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a></li>
+        {% endfor %}
+
+        {% if current_page < total_pages %}
+            <li class="page-item"><a class="page-link" href="?page={{ current_page + 1 }}">Next</a></li>
+        {% else %}
+            <li class="page-item disabled"><span class="page-link">Next</span></li>
+        {% endif %}
+    </ul>
+</nav>
 
 {% endblock %}
