quick start/stop and filtering

--- a/web_interface/templates/base.html
+++ b/web_interface/templates/base.html
@@ -85,7 +85,7 @@
         border: 1px solid var(--whiteSpace);
         color: var(--bodyText);
         border-radius: 8px;
-        padding: 8px 24px;
+        padding: 8px 20px;
         text-decoration: none;
         font-size: 16px;
         margin: 4px 2px;
@@ -100,12 +100,28 @@
         transform: translateY(4px);
     }
 
+    .buttonB {
+        border: 1px solid var(--whiteSpace);
+        color: var(--bodyText);
+        border-radius: 8px;
+        padding: 8px 20px;
+        text-decoration: none;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        box-shadow: 0 6px #999;
+    }
+
     .image-card {
         padding: 4px;
         margin-bottom: 4px;
         background-color: var(--dark3);
         border: 2px solid var(--dark3);
         border-radius: 8px;
+    }
+
+    .image-card img {
+        aspect-ratio: 1;
     }
 
     .page-link {
@@ -126,7 +142,6 @@
     }
     .pagination .page-item.disabled .page-link {
         background-color: var(--dark4);
-        color: var(--dark5);
         border: 1px solid var(--whiteSpace);
     }
     .form-control {
