--- a/web_interface/templates/all_images.html
+++ b/web_interface/templates/all_images.html
@@ -5,22 +5,24 @@
 {% block content %}
 
 <h2>All Images</h2>
-<div class="form-group">
-    <label for="dateFilter">Filter by Date:</label>
-    <input type="date" class="form-control" id="dateFilter" style="width: 180px;">
+
+<div class="form-group-row">
+    <label for="startDate">Filter Date Range:</label>
+    <input type="date" class="form-control" id="startDate" style="width: 180px;">
+    <span style="margin: 0 10px;">to</span>
+    <input type="date" class="form-control" id="endDate" style="width: 180px;">
+    <button onclick="filterImages()" class="buttonA">Filter</button>
+
+    <div href="{{ url_for('download_images_as_zip') }}"
+        class="btn btn-dark btn-sm buttonB" style="float: right;">Download All
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+          <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+          <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
+        </svg>
+    </div>
 </div>
 
-<button class="buttonA" onclick="filterByDate()">Filter</button>
-
-<a href="{{ url_for('download_images_as_zip') }}"
-    class="btn btn-dark btn-sm">Download All
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
-      <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
-      <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
-    </svg>
-</a>
-
-<!-- Add a grid of images with dates here -->
+<!-- Grid of images with dates -->
 <div class="row mt-3" id="imagesGrid">
     <!-- Loop through image URLs and render images dynamically -->
     {% for image in images %}
@@ -30,7 +32,7 @@
             <div class="card-body">
                 <a class="card-text">{{ image.date }}</a>
                 <a href="{{ url_for('download_image', image_path=image.url) }}" download="AMDT_{{image.date}}.jpg"
-                    class="btn btn-dark btn-sm">
+                    class="btn btn-dark btn-sm buttonB" >
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                       <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
                       <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
@@ -62,5 +64,21 @@
         {% endif %}
     </ul>
 </nav>
+<script>
+    const start_date = "{{ filter_start }}";
+    const end_date = "{{ filter_end }}";
+    document.getElementById("startDate").value = start_date;
+    document.getElementById('endDate').value = end_date;
+
+    function filterImages() {
+        var startDate = document.getElementById('startDate').value;
+        var endDate = document.getElementById('endDate').value;
+
+        // Redirect to the Flask route with start and end date parameters
+        window.location.href = "{{ url_for('all_images') }}" + "?start_date=" + startDate + "&end_date=" + endDate;
+    }
+
+
+</script>
 
 {% endblock %}
