--- a/web_interface/templates/configure.html
+++ b/web_interface/templates/configure.html
@@ -52,11 +52,27 @@ content %}
     </div>
 
     <div class="form-group" style="display: flex; align-items: center;">
-      <button class="buttonA" id="save-button" onclick="saveConfiguration()">Save</button>
+      <button class="buttonA" style="margin-right: 4px;" id="save-button" onclick="saveConfiguration()">Save</button>
       <svg id="isSaved" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle text-success" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm1.97 4.97a.758.758 0 0 1 1.08 0l.727.728a.758.758 0 0 1 0 1.077L7.646 10.75a.758.758 0 0 1-1.079 0L4.646 8.977a.758.758 0 0 1 0-1.077l.728-.728a.758.758 0 0 1 1.08 0l1.221 1.22 3.096-3.096z"/>
       </svg>
     </div>
+    <br/>
+
+    <h3>Quick Control:</h3>
+    <div class="form-group" style="display: flex; align-items: center;">
+      <button class="buttonA" style="color: #90EE90; margin-right: 4px;" onclick="quickStart()">Start</button>
+      <button class="buttonA" style="color: #FF474C;margin-right: 4px;" onclick="quickStop()">Stop</button>
+      <svg id="isStarted" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle text-success" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm1.97 4.97a.758.758 0 0 1 1.08 0l.727.728a.758.758 0 0 1 0 1.077L7.646 10.75a.758.758 0 0 1-1.079 0L4.646 8.977a.758.758 0 0 1 0-1.077l.728-.728a.758.758 0 0 1 1.08 0l1.221 1.22 3.096-3.096z"/>
+      </svg>
+      <svg id="isStopped" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle text-danger" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zM4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+      </svg>
+    </div>
+
+
+
     <br />
   </div>
 
@@ -120,6 +136,74 @@ content %}
     document.getElementById("end-day").value = end_date;
   }
 
+
+  function quickStart() {
+    var data = {
+      startTime: "22:00:00",
+      endTime: "06:30:00",
+      startDay: "2024-04-07",
+      endDay: "2024-04-16",
+    };
+
+    // Send AJAX request to Flask endpoint to update Firebase
+    fetch("/update_run", {
+      method: "POST",
+      body: JSON.stringify(data),
+      headers: {
+        "Content-Type": "application/json",
+      },
+    })
+      .then((response) => response.json())
+      .then((data) => {
+        // Handle success response if needed
+        console.log(data);
+        document.getElementById("isStarted").style.display = "block";
+        setTimeout(function() {
+          document.getElementById("isStarted").style.display = "none";
+        }, 2000);
+
+      })
+      .catch((error) => {
+        // Handle error if needed
+        console.error("Error:", error);
+      });
+  }
+
+
+  function quickStop() {
+    var data = {
+      startTime: "22:00:00",
+      endTime: "06:30:00",
+      startDay: "2024-04-07",
+      endDay: "2024-04-08",
+    };
+
+    // Send AJAX request to Flask endpoint to update Firebase
+    fetch("/update_run", {
+      method: "POST",
+      body: JSON.stringify(data),
+      headers: {
+        "Content-Type": "application/json",
+      },
+    })
+      .then((response) => response.json())
+      .then((data) => {
+        // Handle success response if needed
+        console.log(data);
+        document.getElementById("isStopped").style.display = "block";
+        setTimeout(function() {
+          document.getElementById("isStopped").style.display = "none";
+        }, 2000);
+
+      })
+      .catch((error) => {
+        // Handle error if needed
+        console.error("Error:", error);
+      });
+  }
+
+
+
   // Fetch current date and time from the server
   function fetchCurrentDateTime() {
     const start_date = "{{ start_date }}";
@@ -136,5 +220,7 @@ content %}
   // Call the function to fetch and populate current date and time when the page loads
   fetchCurrentDateTime();
   document.getElementById("isSaved").style.display = "none";
+  document.getElementById("isStarted").style.display = "none";
+  document.getElementById("isStopped").style.display = "none";
 </script>
 {% endblock %}
