--- a/web_interface/templates/detected_meteors.html
+++ b/web_interface/templates/detected_meteors.html
@@ -6,28 +6,33 @@
 
 <h2>Detected Meteors</h2>
 
-<div class="form-group">
-    <label for="dateFilter">Filter by Date:</label>
-    <input type="date" class="form-control" id="dateFilter" style="width: 180px;">
+<div class="form-group-row">
+
+    <div href="{{ url_for('download_images_as_zip') }}"
+        class="btn btn-dark btn-sm buttonB" ">Download All
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+          <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+          <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
+        </svg>
+    </div>
 </div>
 
-<button class="buttonA" onclick="filterByDate()">Filter</button>
-
-<a href="{{ url_for('download_images_as_zip') }}"
-    class="btn btn-dark btn-sm">Download All
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
-      <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
-      <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
-    </svg>
-</a>
-
+<!-- Grid of images with dates -->
 <div class="row mt-3" id="meteorsGrid">
+    <!-- Loop through image URLs and render images dynamically -->
     {% for image in images %}
     <div class="col-md-4 mb-3">
         <div class="image-card">
             <img src="{{ image.url }}" class="card-img-top" alt="Image">
             <div class="card-body">
-                <p class="card-text">{{ image.date }}</p>
+                <a class="card-text">{{ image.date }}</a>
+                <a href="{{ url_for('download_image', image_path=image.url) }}" download="AMDT_{{image.date}}.jpg"
+                    class="btn btn-dark btn-sm buttonB">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                      <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+                      <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
+                    </svg>
+                </a>
             </div>
         </div>
     </div>
